# nvbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-test.yml
include/nvbox/: DeviceStatusModel.hpp  DeviceStatusService.hpp  DeviceStatusView.hpp  IService.hpp  IView.hpp  Stopwatch.hpp  demo.cuh  utility.cuh  utility.hpp
src/: Stopwatch.cpp  demo.cu  main.cpp  utility.cu
tests/: foo.cpp
